fixed sidebar button spacing

--- a/style.css
+++ b/style.css
@@ -60,14 +60,14 @@ body {
 
 .filter-buttons button {
      margin: 0;
-     margin-bottom: 10px;
+     margin-bottom: 8px;
      padding: 0px 40px 0px 15px;
      border: none;
      text-align: left;
      display: flex;
      flex-direction: row;
      width: 240px;
-     height: 42px;
+     height: 40px;
      justify-content: space-between;
      align-items: center;
      background: #1897D4;
@@ -102,7 +102,7 @@ button:focus {
 }
 
 #clear-button {
-     height: 75px;
+     height: 70px;
      background: #FFFFFF;
      border: .25 solid #A5ACAF;
      box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, .25);
@@ -110,7 +110,7 @@ button:focus {
      font-family: "Gotham Black";
      font-size: 22px;
      color: black;
-     margin: 40px 0px;
+     margin: 20px 0px;
      display: none;
      flex-direction: column;
      justify-content: center;
@@ -123,7 +123,7 @@ button:focus {
 }
 
 .grid-container {
-     width: 1300px;
+     width: 1350px;
      float: right;
      position: relative;
      left: 330px;
@@ -143,13 +143,13 @@ button:focus {
 
 .column div {
      margin-right: 40px !important;
-     margin-bottom: -30px !important;
+     margin-bottom: -20px !important;
 }
 
 button img {
      margin-left: -45px;
      margin-top: -55px;
-     width: 280px !important;
+     width: 290px !important;
      height: auto !important;
      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
